// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton Renders 1`] = `
[
  <button
    class="sc-bgqQcB cRBzGi"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders primary 1`] = `
[
  <button
    class="sc-bgqQcB jVNJGw"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders secondary 1`] = `
[
  <button
    class="sc-bgqQcB cRBzGi"
  >
    Text
  </button>,
]
`;
